ontapdoc-3096 Amanda's feedback on rhel 9 versions

--- a/nvme-rhel-10.adoc
+++ b/nvme-rhel-10.adoc
@@ -674,7 +674,7 @@ DHHC- 1:03:7zf8I9gaRcDWH3tCH5vLGaoyjzPIvwNWusBfKdpJa+hia
 ----
 ====
 --
-.JSON file
+.JSON
 --
 When multiple NVMe subsystems are available on the ONTAP controller, you can use the `/etc/nvme/config.json` file with the `nvme connect-all` command. 
 
