--- a/nvme-rhel-95.adoc
+++ b/nvme-rhel-95.adoc
@@ -15,7 +15,7 @@ summary: How to Configure NVMe-oF Host for RHEL 9.5 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for Red Hat Enterprise Linux (RHEL) 9.5. For additional support and feature information, refer to link:hu-nvme-index.html[NVME-oF Overview^].
+This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for Red Hat Enterprise Linux (RHEL) 9.5. For additional support and feature information, refer to link:hu-nvme-index.html[NVME-oF Overview^]. There are no known limitations for RHEL 9.5.
 
 == Step 1: Optionally, enable SAN booting
 
