--- a/nvme-rhel-91.adoc
+++ b/nvme-rhel-91.adoc
@@ -23,9 +23,9 @@ This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for R
 
 You can configure your host to use SAN booting to simplify deployment and improve scalability, see link:nvme-enable-SAN-booting.html[Enable SAN booting^].
 
-== Step 2: Validate software versions
+== Step 2: Verify the software version and NVMe configuration
  
-You can use the following procedure to validate the minimum supported RHEL 9.1 software versions.
+You can use the following procedure to verify the minimum supported RHEL 9.1 software versions and NVMe configuration.
 
 .Steps
 
@@ -68,20 +68,20 @@ The following example shows an libnvme package version:
 libnvme-1.0-3.el9.x86_64
 ----
 
-. On the RHEL 9.1 host, check the hostnqn string at `/etc/nvme/hostnqn`:
+. On the RHEL 9.1 host, check the `hostnqn` string at `/etc/nvme/hostnqn`:
 +
 [source,cli]
 ----
 cat /etc/nvme/hostnqn
 ----
 +
-The following example shows an hostnqn version:
+The following example shows a `hostnqn` version:
 +
 ----
 nqn.2014-08.org.nvmexpress:uuid:325e7554-1f9b-11ec-8489-3a68dd61a4df
 ----
 
-. Verify that the `hostnqn` string matches the `hostnqn` string for the corresponding subsystem on the ONTAP array:
+. Verify that the `hostnqn` string matches the `hostnqn` string for the corresponding subsystem on the ONTAP storage system:
 +
 [source,cli]
 ----
@@ -99,17 +99,19 @@ vs_nvme207   rhel_207_LPe32002    nqn.2014-08.org.nvmexpress:uuid:325e7554-1f9b-
 ====
 +
 [NOTE]
-If the `hostnqn` strings do not match, use the `vserver modify` command to update the `hostnqn` string on your corresponding ONTAP array subsystem to match the `hostnqn` string from `/etc/nvme/hostnqn` on the host.
+If the `hostnqn` strings do not match, use the `vserver modify` command to update the `hostnqn` string on your corresponding ONTAP storage system subsystem to match the `hostnqn` string from `/etc/nvme/hostnqn` on the host.
 
-== Step 3: Configure NVMe/FC
+== Step 3: Configure NVMe/FC and NVMe/TCP
 
-You can configure NVMe/FC for Broadcom/Emulex or Marvell/Qlogic adapters.
+You can configure NVMe/FC for Broadcom/Emulex or Marvell/QLogic adapters, or configure NVMe/TCP using manual discovery and connect operations.
+
+[NOTE]
+NVMe/FC is supported on RHEL 9.1 and later. NVMe/TCP is supported on RHEL 8.6 and later. NVMe/TCP doesn't support auto-connect operations and requires manual connect or connect-all commands.
 
 [role="tabbed-block"]
 ====
-.Broadcom/Emulex
+.FC - Broadcom/Emulex
 --
-Configure NVMe/FC for a Broadcom/Emulex adapter.
 
 .Steps
 
@@ -136,7 +138,7 @@ LPe32002-M2
 cat /sys/class/scsi_host/host*/modeldesc
 ----
 +
-You should see an output similar to the following example:
+You should see output similar to the following example:
 +
 ----
 Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
@@ -152,7 +154,7 @@ Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 cat /sys/class/scsi_host/host*/fwrev
 ----
 +
-The following example shows firmware versions:
+The command returns firmware versions:
 +
 ----
 14.0.505.11, sli-4:2:c
@@ -174,7 +176,7 @@ The following example shows a driver version:
 +
 For the current list of supported adapter driver and firmware versions, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 
-. Verify that the expected output of `lpfc_enable_fc4_type` is set to `3`:
+. Verify that `lpfc_enable_fc4_type` is set to `3`:
 +
 [source,cli]
 ----
@@ -188,7 +190,7 @@ cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
 cat /sys/class/fc_host/host*/port_name
 ----
 +
-You should see the following output:
+You should see output similar to:
 +
 ----
 0x100000109b1b95ef
@@ -249,39 +251,24 @@ FCP CMPL: xb 00000000 Err 00000004
 ----
 =====
 --
-.Marvell/QLogic
+.FC - Marvell/QLogic
 --
-Configure NVMe/FC for a Marvell/QLogic adapter.
 
 .Steps
 
-. Verify that you are using the supported adapter model, driver, and firmware versions:
+. Verify that you are using the supported adapter driver and firmware versions:
 +
 [source,cli]
 ----
 cat /sys/class/fc_host/host*/symbolic_name
 ----
 +
-You should see output similar to:
+The following example shows driver and firmware versions:
 +
 ----
 QLE2772 FW:v9.08.02 DVR:v10.02.07.400-k-debug
 QLE2772 FW:v9.08.02 DVR:v10.02.07.400-k-debug
 ----
-
-. Verify that the recommended inbox qla2xxx driver is loaded:
-+
-[source,cli]
-----
-cat /sys/module/qla2xxx/version
-----
-+
-You should see the following output:
-+
-----
-The driver version included in the RHEL 9.1 kernel.
-----
-
 
 . Verify that `ql2xnvmeenable` is set. This enables the Marvell adapter to function as an NVMe/FC initiator:
 +
@@ -290,25 +277,15 @@ The driver version included in the RHEL 9.1 kernel.
 cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
 ----
 +
-The expected output is:
-+
-----
-1
-----
+The expected output is 1.
 --
-====
 
-== Step 4: Optionally, enable 1MB I/O 
-
-You can increase the `lpfc` value to issue 1MB I/O requests on the Broadcom NVMe/FC host, see  link:nvme-enable-broadcom-1mb-size.html[Enable 1MB I/O^].
-
-== Step 5: Configure NVMe/TCP
-
-include::_include/nvme/nvme-configure-nvme-tcp.adoc[]
+.TCP
+--
 
 .Steps
 
-. Verify that the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
+. Verify that the initiator port can retrieve the discovery log page data across the supported NVMe/TCP LIFs:
 +
 [source,cli]
 ----
@@ -326,28 +303,29 @@ Discovery Log Number of Records 10, Generation counter 119
 =====Discovery Log Entry 0======
 trtype: tcp
 adrfam: ipv4
-subtype: nvme subsystem
+subtype: *nvme subsystem*
 treq: not specified
 trsvcid: 4420
 traddr: 192.168.2.56
 =====Discovery Log Entry 1======
- 
+trtype: tcp
 adrfam: ipv4
+subtype: *nvme subsystem*  
 treq: not specified
- 
 trsvcid: 4420
 traddr: 192.168.1.51
 sectype: none
+=====Discovery Log Entry 2======
+trtype: tcp
 adrfam: ipv4
- 
+subtype: *nvme subsystem*
 treq: not specified
 trsvcid: 4420
- 
 traddr: 192.168.2.56
 ----
 =====
 
-. Verify that the other NVMe/TCP initiator-target LIF combinations can successfully fetch discovery log page data: 
+. Verify that the other NVMe/TCP initiator-target LIF combinations can successfully retrieve the discovery log page data:
 +
 [source,cli]
 ----
@@ -356,7 +334,7 @@ nvme discover -t tcp -w host-traddr -a traddr
 +
 .Show example
 [%collapsible]
-====
+=====
 [subs=+quotes]
 ----
 nvme discover -t tcp -w 192.168.1.8 -a 192.168.1.51
@@ -364,7 +342,7 @@ nvme discover -t tcp -w 192.168.1.8 -a 192.168.1.52
 nvme discover -t tcp -w 192.168.2.9 -a 192.168.2.56
 nvme discover -t tcp -w 192.168.2.9 -a 192.168.2.57
 ----
-====
+=====
 
 . Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes:
 +
@@ -384,15 +362,29 @@ nvme connect-all -t tcp -w 192.168.2.9 -a 192.168.2.56 -l 1800
 nvme connect-all -t tcp -w 192.168.2.9 -a 192.168.2.57 -l 1800
 ----			
 =====
+--
+====
 
-== Step 6: Validate NVMe-oF
+== Step 4: Optionally, enable 1MB I/O for NVMe/FC
+
+You can enable I/O requests of size 1MB for NVMe/FC configured with a Broadcom adapter, see  link:nvme-enable-broadcom-1mb-size.html[Enable 1MB I/O for NVMe/FC^].
+
+== Step 5: Verify NVMe boot services
+
+With RHEL 9.1, the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services included in the NVMe/FC `nvme-cli` package are automatically enabled when the system boots. 
+
+After booting completes, verify that the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services are enabled.
+
+include::_include/nvme/verify-nvme-services.adoc[]
+
+== Step 6: Verify the multipathing configuration
 
 include::_include/nvme/nvme-validate-nvme-of.adoc[]
 
 . Verify that the controller state of each path is live and has the correct ANA status:
 +
 [role="tabbed-block"]
-=====
+====
 .NVMe/FC
 --
 [source,cli]
@@ -402,7 +394,7 @@ nvme list-subsys /dev/nvme0n1
 
 .Show example
 [%collapsible]
-====
+=====
 [subs=+quotes]
 ----
 nvme-subsys10 - NQN=nqn.1992-08.com.netapp:sn.82e7f9edc72311ec8187d039ea14107d:subsystem.rhel_131_QLe2742
@@ -412,7 +404,7 @@ nvme-subsys10 - NQN=nqn.1992-08.com.netapp:sn.82e7f9edc72311ec8187d039ea14107d:s
  +- nvme4 fc traddr=nn-0x2038d039ea1308e5:pn-0x203bd039ea1308e5,host_traddr=nn-0x20000024ff171d30:pn-0x21000024ff171d30 *live optimized*
  +- nvme5 fc traddr=nn-0x2038d039ea1308e5:pn-0x203ad039ea1308e5,host_traddr=nn-0x20000024ff171d31:pn-0x21000024ff171d31 *live non-optimized*
 ----
-====
+=====
 --
 .NVMe/TCP
 --
@@ -423,7 +415,7 @@ nvme list-subsys /dev/nvme0n1
 
 .Show example
 [%collapsible]
-====
+=====
 [subs=+quotes]
 ----
 nvme-subsys1 - NQN=nqn.1992-08.com.netapp:sn.bf0691a7c74411ec8187d039ea14107d:subsystem.rhel_tcp_133
@@ -433,14 +425,14 @@ nvme-subsys1 - NQN=nqn.1992-08.com.netapp:sn.bf0691a7c74411ec8187d039ea14107d:su
  +- nvme3 tcp traddr=192.168.167.21,trsvcid=4420,host_traddr=192.168.167.5 *live non-optimized*
  +- nvme4 tcp traddr=192.168.167.20,trsvcid=4420,host_traddr=192.168.167.5 *live optimized*
 ----
-====
---
 =====
+--
+====
 
 . Verify that the NetApp plug-in displays the correct values for each ONTAP namespace device:
 +
 [role="tabbed-block"]
-=====
+====
 .Column
 --
 [source,cli]
@@ -450,7 +442,7 @@ nvme netapp ontapdevices -o column
 
 .Show example
 [%collapsible]
-====
+=====
 [subs=+quotes]
 ----
 Device       Vserver          Namespace Path
@@ -461,7 +453,7 @@ NSID  UUID                                   Size
 ----  ------------------------------         ------
 1     79c2c569-b7fa-42d5-b870-d9d6d7e5fa84  21.47GB
 ----
-====
+=====
 --
 .JSON
 --
@@ -472,7 +464,7 @@ nvme netapp ontapdevices -o json
 
 .Show example
 [%collapsible]
-====
+=====
 [subs=+quotes]
 ----
 { 
@@ -494,13 +486,13 @@ nvme netapp ontapdevices -o json
 
 } 
 ----
-====
---
 =====
+--
+====
 
 == Step 7: Review the known issues
 
-The NVMe-oF host configuration for RHEL 9.1 with ONTAP has the following known issues:
+These are the known issues:
 
 [cols="20,40,40",options="header"]
 |===
