--- a/nvme-rhel-92.adoc
+++ b/nvme-rhel-92.adoc
@@ -23,9 +23,9 @@ This document describes how to configure NVMe over Fabrics (NVMe-oF) hosts for R
 
 You can configure your host to use SAN booting to simplify deployment and improve scalability, see link:nvme-enable-SAN-booting.html[Enable SAN booting^].
 
-== Step 2: Validate software versions
- 
-You can use the following procedure to validate the minimum supported RHEL 9.2 software versions.
+== Step 2: Verify the software version and NVMe configuration
+
+Use the following procedure to validate that your RHEL 9.2 system meets the software requirements and verify the NVMe package installations and host configuration.
 
 .Steps
 
@@ -68,14 +68,14 @@ The following example shows an libnvme package version:
 libnvme-1.2-2.el9.x86_64
 ----
 
-. On the RHEL 9.2 host, check the hostnqn string at `/etc/nvme/hostnqn`:
+. On the host, check the hostnqn string at `/etc/nvme/hostnqn`:
 +
 [source,cli]
 ----
 cat /etc/nvme/hostnqn
 ----
 +
-The following example shows an hostnqn version:
+The following example shows an `hostnqn` version:
 +
 ----
 nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0032-3310-8033-b8c04f4c5132
@@ -97,19 +97,21 @@ Vserver     Subsystem          Host NQN
 vs_nvme207   rhel_207_LPe32002    nqn.2014-08.org.nvmexpress:uuid:325e7554-1f9b-11ec-8489-3a68dd61a4df
 ----
 ====
-+
+
 [NOTE]
-If the `hostnqn` strings do not match, use the `vserver modify` command to update the `hostnqn` string on your corresponding ONTAP array subsystem to match the `hostnqn` string from `/etc/nvme/hostnqn` on the host.
+If the `hostnqn` strings do not match, use the `vserver modify` command to update the `hostnqn` string on your corresponding ONTAP storage system subsystem to match the `hostnqn` string from `/etc/nvme/hostnqn` on the host.
 
-== Step 3: Configure NVMe/FC
+== Step 3: Configure NVMe/FC and NVMe/TCP
 
-You can configure NVMe/FC for Broadcom/Emulex or Marvell/Qlogic adapters.
+Configure NVMe/FC with Broadcom/Emulex or Marvell/QLogic adapters, or configure NVMe/TCP using manual discovery and connect operations. 
+
+[NOTE]
+NVMe/TCP doesn't support auto-connect operations and requires manual connect or connect-all commands.
 
 [role="tabbed-block"]
 ====
-.Broadcom/Emulex
+.FC - Broadcom/Emulex
 --
-Configure NVMe/FC for a Broadcom/Emulex adapter.
 
 .Steps
 
@@ -249,8 +251,7 @@ FCP CMPL: xb 00001f50 Err 0000d9f8
 ----
 =====
 --
-
-.Marvell/QLogic
+.FC - Marvell/QLogic
 --
 Configure NVMe/FC for a Marvell/QLogic adapter.
 
@@ -283,19 +284,13 @@ The expected output is:
 1
 ----
 --
-====
 
-== Step 4: Optionally, enable 1MB I/O 
-
-You can increase the `lpfc` value to issue 1MB I/O requests on the Broadcom NVMe/FC host, see  link:nvme-enable-broadcom-1mb-size.html[Enable 1MB I/O^].
-
-== Step 5: Configure NVMe/TCP
-
-include::_include/nvme/nvme-configure-nvme-tcp.adoc[]
+.TCP
+--
 
 .Steps
 
-. Verify that the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
+. Verify that the initiator port can retrieve the discovery log page data across the supported NVMe/TCP LIFs:
 +
 [source,cli]
 ----
@@ -313,40 +308,40 @@ Discovery Log Number of Records 8, Generation counter 18
 =====Discovery Log Entry 0======
 trtype:  tcp
 adrfam:  ipv4
-subtype: current discovery subsystem
+subtype: *current discovery subsystem*
 treq:    not specified
 portid:  0
 trsvcid: 8009
 subnqn:  nqn.1992-08.com.netapp:sn.c680f5bcae1411ed8639d039ea951c46:discovery
 traddr:  192.168.166.23
-eflags:  explicit discovery connections, duplicate discovery information
+eflags:  *explicit discovery connections, duplicate discovery information*
 sectype: none
 =====Discovery Log Entry 1======
 trtype:  tcp
 adrfam:  ipv4
-subtype: current discovery subsystem
+subtype: *current discovery subsystem*
 treq:    not specified
 portid:  1
 trsvcid: 8009
 subnqn:  nqn.1992-08.com.netapp:sn.c680f5bcae1411ed8639d039ea951c46:discovery
 traddr:  192.168.166.22
-eflags:  explicit discovery connections, duplicate discovery information
+eflags:  *explicit discovery connections, duplicate discovery information*
 sectype: none
 =====Discovery Log Entry 2======
 trtype:  tcp
 adrfam:  ipv4
-subtype: current discovery subsystem
+subtype: *current discovery subsystem*
 treq:    not specified
 portid:  2
 trsvcid: 8009
 subnqn:  nqn.1992-08.com.netapp:sn.c680f5bcae1411ed8639d039ea951c46:discovery
 traddr:  192.168.167.23
-eflags:  explicit discovery connections, duplicate discovery information
+eflags:  *explicit discovery connections, duplicate discovery information*
 sectype: none
 ----
 =====
 
-. Verify that the other NVMe/TCP initiator-target LIF combinations can successfully fetch discovery log page data: 
+. Verify that the other NVMe/TCP initiator-target LIF combinations can successfully retrieve the discovery log page data:
 +
 [source,cli]
 ----
@@ -355,7 +350,7 @@ nvme discover -t tcp -w host-traddr -a traddr
 +
 .Show example
 [%collapsible]
-====
+=====
 [subs=+quotes]
 ----
 nvme discover -t tcp -w 192.168.166.5 -a 192.168.166.22
@@ -363,7 +358,7 @@ nvme discover -t tcp -w 192.168.166.5 -a 192.168.166.23
 nvme discover -t tcp -w 192.168.167.5 -a 192.168.167.22
 nvme discover -t tcp -w 192.168.167.5 -a 192.168.167.23
 ----
-====
+=====
 
 . Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes:
 +
@@ -383,15 +378,29 @@ nvme	connect-all	-t	tcp	-w	192.168.167.5	-a	192.168.167.22	-l	1800
 nvme	connect-all	-t	tcp	-w	192.168.167.5	-a	192.168.167.23	-l	1800
 ----			
 =====
+--
+====
 
-== Step 6: Validate NVMe-oF
+== Step 4: Optionally, enable 1MB I/O for NVMe/FC
+
+You can enable I/O requests of size 1MB for NVMe/FC configured with a Broadcom adapter, see  link:nvme-enable-broadcom-1mb-size.html[Enable 1MB I/O for NVMe/FC^].
+
+== Step 5: Verify NVMe boot services
+
+With RHEL 9.2, the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services included in the NVMe/FC `nvme-cli` package are automatically enabled when the system boots. 
+
+After booting completes, verify that the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services are enabled.
+
+include::_include/nvme/verify-nvme-services.adoc[]
+
+== Step 6: Verify the multipathing configuration
 
 include::_include/nvme/nvme-validate-nvme-of.adoc[]
 
 . Verify that the controller state of each path is live and has the correct ANA status:
 +
 [role="tabbed-block"]
-=====
+====
 .NVMe/FC
 --
 [source,cli]
@@ -401,7 +410,7 @@ nvme list-subsys /dev/nvme0n1
 
 .Show example
 [%collapsible]
-====
+=====
 [subs=+quotes]
 ----
 nvme-subsys4 - NQN=nqn.1992-08.com.netapp:sn.8763d311b2ac11ed950ed039ea951c46:subsystem.rhel_207_LB \
@@ -410,7 +419,7 @@ nvme-subsys4 - NQN=nqn.1992-08.com.netapp:sn.8763d311b2ac11ed950ed039ea951c46:su
 +- nvme3 fc traddr=nn-0x20a6d039ea954d17:pn-0x20aad039ea954d17,host_traddr=nn-0x200000109b1b95f0:pn-0x100000109b1b95f0 *live non-optimized* 
 +- nvme5 fc traddr=nn-0x20a6d039ea954d17:pn-0x20a9d039ea954d17,host_traddr=nn-0x200000109b1b95ef:pn-0x100000109b1b95ef *live non-optimized*
 ----
-====
+=====
 --
 .NVMe/TCP
 --
@@ -421,7 +430,7 @@ nvme list-subsys /dev/nvme1n1
 
 .Show example
 [%collapsible]
-====
+=====
 [subs=+quotes]
 ----
 nvme-subsys1 - NQN=nqn.1992-08.com.netapp:sn.c680f5bcae1411ed8639d039ea951c46:subsystem.rhel_tcp97 \
@@ -430,14 +439,14 @@ nvme-subsys1 - NQN=nqn.1992-08.com.netapp:sn.c680f5bcae1411ed8639d039ea951c46:su
 +- nvme3 tcp traddr=192.168.166.23,trsvcid=4420,host_traddr=192.168.166.5 *live optimized* 
 +- nvme4 tcp traddr=192.168.166.22,trsvcid=4420,host_traddr=192.168.166.5 *live optimized*  
 ----
-====
---
 =====
+--
+====
 
 . Verify that the NetApp plug-in displays the correct values for each ONTAP namespace device:
 +
 [role="tabbed-block"]
-=====
+====
 .Column
 --
 [source,cli]
@@ -447,7 +456,7 @@ nvme netapp ontapdevices -o column
 
 .Show example
 [%collapsible]
-====
+=====
 [subs=+quotes]
 ----
 Device        Vserver   Namespace Path                                                          
@@ -460,7 +469,7 @@ NSID       UUID                                   Size
 ------------------------------------------------------------
 1          79c2c569-b7fa-42d5-b870-d9d6d7e5fa84	21.47GB
 ----
-====
+=====
 --
 .JSON
 --
@@ -471,7 +480,7 @@ nvme netapp ontapdevices -o json
 
 .Show example
 [%collapsible]
-====
+=====
 [subs=+quotes]
 ----
 {
@@ -492,9 +501,9 @@ nvme netapp ontapdevices -o json
 ]
 }
 ----
-====
---
 =====
+--
+====
 
 == Step 7: Review the known issues
 
